Fix uneven padding on box.

--- a/src/resources/postcss/custom-tables-v1/ct1-upgrade.pcss
+++ b/src/resources/postcss/custom-tables-v1/ct1-upgrade.pcss
@@ -181,7 +181,7 @@
 	font-family: Courier;
 	font-size: 12px;
 	margin: 0.5rem 0 0 0;
-	padding: 1rem 1rem 2rem;
+	padding: 1rem 1rem 1rem;
 }
 
 .tec-ct1-upgrade__report-body-content {
